style: fix z-index for mobile menu

--- a/src/components/mobileMenu/mobileMenu.module.css
+++ b/src/components/mobileMenu/mobileMenu.module.css
@@ -7,6 +7,7 @@
     left: 0;
     background-color: #1C1C21;
     padding: 20px;
+    z-index: 20;
 }
 .mobileMenu a{
     display: flex;
@@ -27,6 +28,7 @@
     margin: 0;
     padding: 0;
 }
+
 
 .sublist{
     list-style-type: none;
